# StixDB

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COOKBOOKS_SUMMARY.md  DEVELOPMENT.md  Dockerfile  LAUNCH_PLAN.md  LICENSE  PRODUCTION.md  QUICKSTART.md  README.md  SECURITY.md  SKILLS_SUMMARY.md  docker-compose.yml  pyproject.toml  start-local.ps1  start-local.sh
benchmarks/longmemeval/: README.md  run_benchmark.py  stixdb_adapter.py
cookbooks/: INDEX.md
cookbooks/comparison/: legacy_vs_stixdb.py
cookbooks/core-sdk/: 01_basic_store_retrieve.py  02_agent_tuning.py  02_pdf_ingest_chat.py  03_local_vs_server.py
cookbooks/custom-embeddings/: README.md  domain_specialized_embeddings.py  hybrid_search_strategy.py  openai_embeddings.py  privacy_first_local_embeddings.py
cookbooks/custom-llm/: README.md  anthropic.py  multi_model_routing.py  ollama_local.py  openai_gpt4o.py  privacy_first_local_llm.py
cookbooks/langchain/: rag_pipeline.py  stixdb_retriever.py
cookbooks/multi-agent/: concurrent_agents.py
cookbooks/openai-compatible/: with_openai_sdk.py
cookbooks/rest-api/: curl_examples.sh  local_to_server.md
cookbooks/vibecoding/: CLAUDE.md  shared_memory.py
doc/: ARCHITECTURE_DIAGRAMS.md  README.md  STIXDB_COMPREHENSIVE_GUIDE.md
doc/architecture/: 00-project-guide.md  10-app-overview.md  11-system-architecture.md  12-repo-organization.md  13-openai-compatibility.md  14-search-api.md  15-sdk-usage.md
doc/performance/: 01-streaming-overview.md  02-retrieval-latency-fix.md  03-verbose-progress-mode.md  04-benchmarking-guide.md
scripts/: rag.py
scripts/benchmarks/: benchmark_retrieval.py
sdk/: LICENSE  README.md  pyproject.toml
sdk/examples/: async_usage.py  health_check.py  ingest_folder_openai_chat.py  query_ask.py  store_and_search.py
sdk/skills/: SKILL.md
sdk/skills/sdk-memory-layer/: README.md  SKILL.md
sdk/skills/sdk-memory-layer/evals/: evals.json
sdk/src/stixdb_sdk/: __init__.py  base.py  client.py  memory.py  query.py  search.py
skills/: NAMING_CONVENTIONS.md  README.md  SKILL.md
skills/API/: SKILL.md
skills/CLI/: SKILL.md
stixdb/: __init__.py  cli.py  client.py  config.py  engine.py  wizard.py
stixdb/agent/: __init__.py  consolidator.py  enricher.py  maintenance.py  memory_agent.py  planner.py  prefetcher.py  reasoner.py  sessions.py  weaver.py  worker.py
stixdb/api/: server.py
stixdb/api/routes/: agent.py  collections.py  openai.py  query.py  search.py
stixdb/backup/: __init__.py  minio_store.py
stixdb/cli/: __init__.py  _api.py  _daemon.py  _helpers.py  _server.py
stixdb/context/: __init__.py  broker.py  response.py
stixdb/graph/: __init__.py  cluster.py  edge.py  memory_graph.py  node.py  summary_index.py
stixdb/ingestion/: __init__.py  code.py  documents.py  vlm.py
stixdb/observability/: __init__.py  tracer.py
stixdb/skills/engine-memory-layer/: SKILL.md
stixdb/skills/engine-memory-layer/evals/: evals.json
stixdb/storage/: __init__.py  base.py  embeddings.py  kuzu_backend.py  neo4j_backend.py  networkx_backend.py  vector_store.py
tests/: conftest.py  test_retrieval_latency.py
