[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stixdb-sdk"
version = "0.1.0"
description = "Python client for StixDB — the agentic context database where the agent lives inside."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StixDB Contributors" }]
keywords = [
    "ai", "agent", "memory", "database", "rag",
    "llm", "graph", "context", "retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Pr0fe5s0r/StixDB"
Repository = "https://github.com/Pr0fe5s0r/StixDB"
Documentation = "https://github.com/Pr0fe5s0r/StixDB/blob/main/sdk/README.md"
"Bug Tracker" = "https://github.com/Pr0fe5s0r/StixDB/issues"
Changelog = "https://github.com/Pr0fe5s0r/StixDB/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stixdb_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
